# generative-model-proxy-server

./: .gitignore  Cargo.toml  README.md  openai_errors.txt  work log.txt
spec/: Proxydraftspec.html
src/: api.rs  main.rs  openai_client.rs  router.rs  usage.rs
src/api/: admin.rs  limiter.rs  mod.rs  state.rs
src/api/admin/: documentation.html  manual.html  mod.rs  setup-instructions.html  setup.html
src/api/model/: mod.rs  openai.rs
src/api/state/: migration.rs  mod.rs
src/limiter/: mod.rs  tests.rs
src/model/: client.rs  endpoints.rs  interface.rs  mod.rs  openai.rs  tokenizer.rs  utility.rs
src/model_v2/: mod.rs  openai.rs
src/model_v3/: mod.rs
src/router/: error.rs  limiter.rs  openai.rs  openai_client.rs  tokenizer.rs
vendored-deps/async-openai/src/: error.rs
vendored-deps/async-openai/src/types/: audio.rs  completion.rs  edit.rs  embedding.rs  image.rs  moderation.rs
vendored-deps/gcra-rs/src/: gcra.rs  lib.rs
