[package]
name    = "language-model-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { path = "vendored-deps/async-openai" }
axum = { version = "0.7.4", features = [
	"http2",
] }
clap = { version = "4.4", features = [
	"derive",
	"env",
	"wrap_help",
] }
fast32 = "1.0"
gcra = { path = "vendored-deps/gcra-rs" }
ring = "0.17"
tokio = { version = "1", features = [
	"full",
	"tracing",
] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = [
	"rt-tokio",
] }
opentelemetry-otlp = "0.14.0"
serde = { version = "1.0", features = [
	"derive",
] }
serde_json = "1.0"
toml = "0.8.8"
tower = { version = "0.4", features = [
	"make",
] }
tower-http = { version = "0.5", features = [
	"full",
] }
tracing = { version = "0.1", features = [
	"release_max_level_debug",
] }
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
] }
reqwest = { version = "0.11", features = [
	"json",
] }
uuid = { version = "1.7", features = [
	"v7",
	"serde",
	"fast-rng",
] }
