[package]
name = "generative-model-proxy-server"
version = "0.1.0"
edition = "2021"
authors = [
	"Kat Romero <transkatgirl@icloud.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.4", features = [
	"http2",
	"multipart",
] }
clap = { version = "4.4", features = [
	"derive",
	"env",
	"wrap_help",
] }
fast32 = "1.0"
gcra = { path = "vendored-deps/gcra-rs" }
http = "1"
reqwest = { version = "0.11", default_features = false, features = [
	"rustls-tls",
	"cookies",
	"gzip",
	"brotli",
	"deflate",
	"json",
	"stream",
	"socks",
	"trust-dns",
	"rustls-tls-webpki-roots",
] }
ring = "0.17"
tokio = { version = "1", features = [
	"full",
	"tracing",
] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = [
	"rt-tokio",
] }
opentelemetry-otlp = "0.15.0"
sled = "0.34.7"
serde = { version = "1.0", features = [
	"derive",
] }
serde_json = "1.0"
tower = { version = "0.4", features = [
	"make",
] }
tower-http = { version = "0.5", features = [
	"full",
] }
tracing = { version = "0.1", features = [
	"release_max_level_debug",
] }
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
] }
uuid = { version = "1.7", features = [
	"v7",
	"serde",
	"borsh",
	"fast-rng",
] }
postcard = { versiion = "1.0", features = [
	"use-std",
] }

[dev-dependencies]
rand = "0.8.5"
